--- a/index.html
+++ b/index.html
@@ -1,102 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Test webmap</title>
-        <link rel="stylesheet" href="lib/leaflet.css">
-        <link rel="stylesheet" href="lib/css/bootstrap.css">
-        <script src="lib/leaflet.js"></script>
-        <script src="lib/jquery-3.6.0.js"></script>
-        <script src="lib/plugins/leaflet.ajax.min.js"></script>
-        <style>
-            #mapdiv {
-                height:100vh; float: right;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="side-bar" class="col-md-3"></div>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Test webmap</title>
+    <link rel="stylesheet" href="lib/leaflet.css">
+    <link rel="stylesheet" href="lib/css/bootstrap.css">
+    <script src="lib/leaflet.js"></script>
+    <script src="lib/jquery-3.6.0.js"></script>
+    <style>
+        #mapdiv {
+            height: 100vh;
+        }
+    </style>
+</head>
+
+<body>
+    <div style="display: flex">
+        <div id="side-bar" class="col-md-3">
             <button id='btnLocate' class='btn btn-primary btn-block'>Locate</button>
             <button id='btnCentroid' class='btn btn-primary btn-block'>Zoom to Centre of England</button>
             <h6>Zoom level: <span id='zoom-level'></span></h6>
             <h6>Map centre: <span id='map-centre'></span></h6>
             <h6>Mouse location: <span id='mouse-location'></span></h6>
-            
-        <div id="mapdiv" class="col-md-9"></div>
-        <script>
-            var mymap;
-            var lyrOSM;
-            var mrkCurrentLocation; 
-            var popCentroid;
-            var lyrEarthworks;
+            <h6>Displayed Data Points: <span id='data-points'></span></h6>
+        </div>
 
-            const Http = new XMLHttpRequest();
-            const url='http://127.0.0.1:5000/earthworks/inspectionreq/?area_dbfo=10';
-            Http.open("GET", url);
-            Http.send();
+        <div id="mapdiv" class="col-md-9">
+            <script>
+                function metConditions(feature) {
+                    return (feature.properties.earthwork_length_m > 700);
+                }
 
-            Http.onreadystatechange=(e)=>{
-                console.log(Http.responseText)
-            };
+                const geoData = fetch('data/NWinspectionreqWGS84.geojson')
+                    .then(res => res.json())
+                    .then(data => {
+                        let filtered = data.features.filter(metConditions);
+                        document.getElementById('data-points').innerHTML = filtered.length;
+                        return data;
+                    });
 
-            $(document).ready(function(){
-                mymap = L.map('mapdiv', {center:[52.561928,-1.464854], zoom:7});
-                lyrOSM = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png');
-                mymap.addLayer(lyrOSM);
+                $(document).ready(function () {
+                    let mrkCurrentLocation;
+                    const mymap = L.map('mapdiv', { center: [52.561928, -1.464854], zoom: 7 });
+                    const lyrOSM = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png');
+                    mymap.addLayer(lyrOSM);
 
-                lyrEarthworks = L.geoJSON.ajax('data/NWinspectionreqWGS84.geojson').addTo(mymap);
-                popCentroid = L.popup();
-                popCentroid.setLatLng([52.561928,-1.464854]);
-                popCentroid.setContent("<h2>Centre of England</h2>");
-
-                mymap.on('click',function(e){
-                    if (e.originalEvent.shiftKey) {
-                        alert(mymap.getZoom());
-                    } else {
-                        alert(e.latlng.toString());
+                    function description(layer) {
+                        let props = layer.feature.properties;
+                        return props.earthwork_type + " " + props.earthwork_length_m + "m";
                     }
-                });
-                mymap.on('contextmenu', function(e){
-                    var dtCurrentTime = new Date();
-                    L.marker(e.latlng).addTo(mymap).bindPopup(e.latlng.toString()+"<br>"+dtCurrentTime.toString());
-                });
-                mymap.on('keypress',function(e) {
-                    if (e.originalEvent.key=="l") {
+
+                    geoData.then(data => L.geoJSON(data, { filter: metConditions })
+                        .addTo(mymap)
+                        .bindPopup(description))
+
+                    const popCentroid = L.popup();
+                    popCentroid.setLatLng([52.561928, -1.464854]);
+                    popCentroid.setContent("<h2>Centre of England</h2>");
+
+                    mymap.on('contextmenu', function (e) {
+                        var dtCurrentTime = new Date();
+                        L.marker(e.latlng).addTo(mymap).bindPopup(e.latlng.toString() + "<br>" + dtCurrentTime.toString());
+                    });
+                    mymap.on('keypress', function (e) {
+                        if (e.originalEvent.key == "l") {
+                            mymap.locate();
+                        }
+                    });
+                    mymap.on('locationfound', function (e) {
+                        console.log(e);
+                        if (mrkCurrentLocation) {
+                            mrkCurrentLocation.remove();
+                        }
+                        mrkCurrentLocation = L.circle(e.latlng, { radius: e.accuracy / 100 }).addTo(mymap);
+                        mymap.setView(e.latlng, 14);
+                    });
+                    mymap.on('locationerror', function (e) {
+                        console.log(e);
+                        alert("location not found");
+                    });
+                    mymap.on('zoomend', function () {
+                        $("#zoom-level").html(mymap.getZoom())
+                    });
+                    mymap.on('moveend', function () {
+                        $("#map-centre").html(LatLngToArrayString(mymap.getCenter()));
+                    });
+                    mymap.on('mousemove', function (e) {
+                        $("#mouse-location").html(LatLngToArrayString(e.latlng));
+                    });
+                    $("#btnLocate").on("click", function (e) {
                         mymap.locate();
+                    });
+                    $("#btnCentroid").on("click", function (e) {
+                        mymap.setView([52.561928, -1.464854], 7);
+                        mymap.openPopup(popCentroid);
+                    });
+                    function LatLngToArrayString(ll) {
+                        return "[" + ll.lat.toFixed(5) + ", " + ll.lng.toFixed(5) + "]";
                     }
-                });                
-                mymap.on('locationfound',function(e) {
-                    console.log(e);
-                    if (mrkCurrentLocation) {
-                        mrkCurrentLocation.remove();
-                    }
-                    mrkCurrentLocation = L.circle(e.latlng,{radius:e.accuracy/100}).addTo(mymap);
-                    mymap.setView(e.latlng, 14);
-                });    
-                mymap.on('locationerror',function(e) {
-                    console.log(e);
-                    alert("location not found");
                 });
-                mymap.on('zoomend',function(){
-                    $("#zoom-level").html(mymap.getZoom())
-                });
-                mymap.on('moveend',function(){
-                    $("#map-centre").html(LatLngToArrayString(mymap.getCenter()));
-                });
-                mymap.on('mousemove',function(e){
-                    $("#mouse-location").html(LatLngToArrayString(e.latlng));
-                });
-                $("#btnLocate").click(function(e) {
-                    mymap.locate();
-                });
-                $("#btnCentroid").click(function(e) {
-                    mymap.setView([52.561928, -1.464854], 7);
-                    mymap.openPopup(popCentroid);
-                });
-            function LatLngToArrayString(ll) {
-                return "["+ll.lat.toFixed(5)+", "+ll.lng.toFixed(5)+"]";
-            }
-            });
-        </script>
-    </body>
+            </script>
+        </div>
+    </div>
+</body>
+
 </html>
