--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Test webmap</title>
+    <title>Earthworks Web Map</title>
     <link rel="preload" href="lib/leaflet.css" as="style">
     <link rel="preload" href="src/style.css" as="style">
-    <link rel="preload" href="lib/leaflet.js" as="script">
-    <link rel="preload" href="src/app.js" as="script">
+    <!-- <link rel="preload" href="lib/leaflet.js" as="script"> -->
+    <!-- <link rel="preload" href="src/app.js" as="script"> -->
 
     <link rel="stylesheet" href="lib/leaflet.css">
     <link rel="stylesheet" href="src/style.css">
 
-    <script defer src="lib/leaflet.js"></script>
-    <script defer src="src/app.js"></script>
+    <!-- <script defer src="lib/leaflet.js"></script> -->
+    <script defer type="module" src="src/app.js"></script>
 </head>
 
 <body>
