--- a/spa/index.html
+++ b/spa/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Earthworks Web Map</title>
-    <link rel="preload" href="lib/leaflet.css" as="style">
-    <link rel="preload" href="src/style.css" as="style">
+    <link rel="preload" href="styles/leaflet.css" as="style">
+    <link rel="preload" href="styles/style.css" as="style">
 
-    <link rel="stylesheet" href="lib/leaflet.css">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="styles/leaflet.css">
+    <link rel="stylesheet" href="styles/style.css">
 
-    <script defer type="module" src="src/app.js"></script>
+    <script defer type="module" src="js/app.js"></script>
 </head>
 
 <body>
