Show all due counts (wip)

--- a/spa/index.html
+++ b/spa/index.html
@@ -38,23 +38,18 @@
             </table>
         </div>
         <div id="inspection-info">
-            <h2>Inspections</h2>
-            <table class="area-table">
-                <tr>
-                    <th>Area</th>
-                    <th>due</th>
-                    <th>overdue</th>
-                </tr>
-                <tr>
-                    <td>
-                        <select id="area_selection">
-                            <option value="10">10</option>
-                            <option value="13">13</option>
-                        </select>
-                    </td>
-                    <td class="due">0</td>
-                    <td class="overdue">0</td>
-                </tr>
+
+            <table id="area-table">
+                <caption>Inspections in fiscal year</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Area</th>
+                        <th scope="col">due</th>
+                        <th scope="col">overdue</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
             </table>
         </div>
     </div>
