Change API data structure, table structure (wip)

--- a/spa/index.html
+++ b/spa/index.html
@@ -40,12 +40,14 @@
         <div id="inspection-info">
 
             <table id="area-table">
-                <caption>Inspections in fiscal year</caption>
+                <caption>Inspections requested</caption>
                 <thead>
                     <tr>
                         <th scope="col">Area</th>
-                        <th scope="col">due</th>
+                        <th scope="col">This year</th>
+                        <th scope="col">km</th>
                         <th scope="col">overdue</th>
+                        <th scope="col">km</th>
                     </tr>
                 </thead>
                 <tbody>
